updated nav links to in-page scroll

--- a/summit/src/assets/css/style.css
+++ b/summit/src/assets/css/style.css
@@ -487,6 +487,10 @@ Preloader CSS
 /*================================================
 Navbar CSS
 =================================================*/
+.scroll-link {
+  cursor: pointer;
+}
+
 .elkevent-mobile-nav {
   display: none;
 }
