--- a/summit/src/assets/css/responsive.scss
+++ b/summit/src/assets/css/responsive.scss
@@ -727,7 +727,7 @@ $value_six: 1650px;
             h3 {
                 font: {
                     size: 18px;
-                    weight: 600;
+                    // weight: 600;
                 }
             }
         }
