--- a/summit/src/assets/css/style.css
+++ b/summit/src/assets/css/style.css
@@ -2971,6 +2971,10 @@ Partner CSS
   margin-bottom: 20px;
 }
 
+.sponsor-logo #big {
+  height: 70px;
+}
+
 /*================================================
 Blog CSS
 =================================================*/
