--- a/summit/src/assets/css/style.scss
+++ b/summit/src/assets/css/style.scss
@@ -453,7 +453,7 @@ Navbar CSS
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 20px;
+    // padding-top: 20px;
     width: 100%;
     z-index: 999;
     height: auto;
