--- a/summit/src/assets/css/responsive.scss
+++ b/summit/src/assets/css/responsive.scss
@@ -382,11 +382,12 @@ $value_six: 1650px;
     .single-speakers-box {
         .speakers-content {
             h3 {
-                font-size: 14px;
+                font-size: 12px;
             }
             span {
-                font-size: 11px;
+                font-size: 10px;
             }
+            padding: 10px 0;
         }
     }
     
