--- a/summit/src/components/Home/recentSpeakersSlider.css
+++ b/summit/src/components/Home/recentSpeakersSlider.css
@@ -42,7 +42,7 @@
   bottom: -1950px; /* Adjust as necessary */
   transform: translateY(100%);
   z-index: 25;
-  
+  display: none !important;
 }
 
 
