--- a/summit/src/components/Home/recentSpeakersSlider.css
+++ b/summit/src/components/Home/recentSpeakersSlider.css
@@ -15,7 +15,7 @@
 
 /* Set a fixed width on each slide */
 .slick-slider-recent-speakers .slick-slide {
-  display: flex !important;
+  
   flex-direction: column;
   justify-content: flex-start;
   display: inline-flex !important;
@@ -24,7 +24,7 @@
 
 .slick-slider-recent-speakers .speakers-image {
   align-self: center;
-  margin-top: 15px; 
+  margin-top: -50px; 
 }
 
 .slick-slider-recent-speakers .speakers-content {
@@ -37,12 +37,12 @@
 /* Position the navigation arrows */
 .slick-slider-recent-speakers .slick-prev,
 .slick-slider-recent-speakers .slick-next {
-  position: absolute;
-  bottom: -1950px; /* Adjust as necessary */
-  transform: translateY(100%);
+  
+  
+  
   z-index: 25;
 
-  display:none !important;
+  
 
 }
 
@@ -51,22 +51,29 @@
 
 /* Custom arrow button styles */
 .slick-arrow {
-  background-color: #ff0000; /* Red color for demo, change as needed */
-  color: #ffffff; /* White text color for demo, change as needed */
-  padding: 10px 15px; /* Padding inside the buttons */
+  
+  
   border: none;
   border-radius: 4px; /* Rounded corners */
-  font-size: 25px; /* Font size for arrows */
+  font-size: 15px; /* Font size for arrows */
+  
+  
 }
 
 /* Position the Previous button to the left of the Next button */
 .slick-prev {
-  right: 360px; /* Right position for Previous button */
+  transform: translateX(0%); 
+  transform: translateY(650%); 
+  width: 120px;
+  margin-top: 20px;
 }
 
 /* Position the Next button next to the Previous button */
 .slick-next {
-  right: 245px; /* Right position for Next button */
+  width: 120px;
+  /* transform: translateX(10%); */
+  transform: translateY(0%); 
+  margin-top: 60px;
 }
 
 /* Style the pagination dots */
@@ -74,7 +81,7 @@
 
 .slick-dots {
   display:none !important;
-  bottom: -500px; /* Position dots below the slider */
+  bottom: -50px; /* Position dots below the slider */
 }
 
 .slick-dots li {
