--- a/summit/src/components/Home/recentSpeakersSlider.css
+++ b/summit/src/components/Home/recentSpeakersSlider.css
@@ -99,7 +99,7 @@
 
 
 .new-speakers-span {
-  color: #ff0000; /* Replace with your desired color */
+  color: #00a1f1; /* Replace with your desired color */
   font: sans-serif !important;
   font-size: 18px;
 }
