--- a/summit/src/assets/css/style.scss
+++ b/summit/src/assets/css/style.scss
@@ -49,7 +49,7 @@ Default CSS
 }
 
 $font-family: 'Poppins', sans-serif;
-$main-color: #FF2D55;
+$main-color: #2e33c6;
 $sub-main-color: #00acee;
 $black-color: #0d1028;
 $white-color: #ffffff;
