--- a/summit/src/assets/scss/main.scss
+++ b/summit/src/assets/scss/main.scss
@@ -1,20 +1,25 @@
 @import 'normalize.css';
+
 @font-face {
     font-family: HarmonyOS Sans SC Black;
     src: url('../font/HarmonyOS_Sans_SC_Black.ttf');
 }
+
 @font-face {
     font-family: HarmonyOS Sans SC Bold;
     src: url('../font/HarmonyOS_Sans_SC_Bold.ttf');
 }
+
 @font-face {
     font-family: HarmonyOS Sans SC Medium;
     src: url('../font/HarmonyOS_Sans_SC_Medium.ttf');
 }
+
 @font-face {
     font-family: HarmonyOS Sans SC Regular;
     src: url('../font/HarmonyOS_Sans_SC_Regular.ttf');
 }
+
 * {
     box-sizing: border-box;
     font-size: .296rem;
@@ -25,10 +30,39 @@
 }
 
 .bg {
-   background: #F4F9FF;
-   padding-bottom: 2.2222rem;
+    background: #F4F9FF;
+    padding-bottom: 2.2222rem;
+
+
 }
 
+.top_item {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    .show_title {
+        text-align: center;
+        font-family: HarmonyOS Sans SC Regular;
+        font-size: .35rem;
+        color: #000000;
+        padding: .25rem 0;
+    }
+
+    .item_bg_box {
+        width: 8rem;
+        height: 1rem;
+        background: url(../images/top_item_bg.png) no-repeat;
+        background-size: 100% 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+            height: .9rem;
+        }
+    }
+}
 *::-webkit-scrollbar {
     width: 2px;
     /* 滚动条的宽度 */
